--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <title>Belajar OpenLayers 6 Web Map</title>
 
         <!-- Local CSS -->
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/map.css">
 
         <!-- OpenLayers CSS -->
-        <link rel="stylesheet" href="./libs/v6.4.3-dist/ol.css">
+        <link rel="stylesheet" href="./css/libs/ol.css">
     </head>
 
     <body>
@@ -21,6 +21,6 @@
         <script src="./js/map.js"></script>
 
         <!-- OpenLayers JS -->
-        <script src="./libs/v6.4.3-dist/ol.js"></script>
+        <script src="./js/libs/ol.js"></script>
     </body>
 </html>
